Src/Engine/Runtime/_Generated/AutoGenerated/Time.typeinfo.h

#pragma once
//*************************************************************************
// This is an auto-generated file - DO NOT edit
//*************************************************************************
#include "E:/EngineProject/SolarEngine/Src/Engine//Runtime/Utilities/Time.h"
#include "Runtime/Core/Scripting/ManagedCLR/CLRUtils.h"
#include "Runtime/Core/Scripting/ScriptingObject.h"
#include "Runtime/Core/Scripting/Internal/InternalCalls.h"
#include "Runtime/Core/Scripting/ScriptingType.h"

//-------------------------------------------------------------------------
// Bindings
//-------------------------------------------------------------------------
//-------------------------------------------------------------------------
// Auto-generated by BindingsGenerator - do not edit manually.
// Source: E:/EngineProject/SolarEngine/Src/Engine//Runtime/Utilities/Time.h
//-------------------------------------------------------------------------
#include "E:/EngineProject/SolarEngine/Src/Engine//Runtime/Utilities/Time.h"
#include "E:/EngineProject/SolarEngine/Src/Engine/Runtime/_Generated/AutoGenerated/BindingsInterop.h"
#include "Runtime/Core/Scripting/ManagedCLR/CLRUtils.h"
#include "Runtime/Core/Scripting/Scripting.h"
#include "Runtime/Core/Scripting/Binary/ManagedBinaryModule.h"
#include "Runtime/Core/Scripting/ScriptingObject.h"
#include "Runtime/Core/Scripting/Internal/InternalCalls.h"
#include "Runtime/Core/Scripting/ScriptingType.h"

namespace SE
{
class TimeInternal
{
public:
#if defined(_MSC_VER)
    DLLEXPORT static ::SE::DateTime StartupTime_Get()
#else
    static ::SE::DateTime StartupTime_Get()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_StartupTime_Get)
#endif
        return ::SE::Time::StartupTime;
    }
#if defined(_MSC_VER)
    DLLEXPORT static void StartupTime_Set(::SE::DateTime value)
#else
    static void StartupTime_Set(::SE::DateTime value)
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_StartupTime_Set)
#endif
        ::SE::Time::StartupTime = value;
    }
#if defined(_MSC_VER)
    DLLEXPORT static float UpdateFPS_Get()
#else
    static float UpdateFPS_Get()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_UpdateFPS_Get)
#endif
        return ::SE::Time::UpdateFPS;
    }
#if defined(_MSC_VER)
    DLLEXPORT static void UpdateFPS_Set(float value)
#else
    static void UpdateFPS_Set(float value)
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_UpdateFPS_Set)
#endif
        ::SE::Time::UpdateFPS = value;
    }
#if defined(_MSC_VER)
    DLLEXPORT static float DrawFPS_Get()
#else
    static float DrawFPS_Get()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_DrawFPS_Get)
#endif
        return ::SE::Time::DrawFPS;
    }
#if defined(_MSC_VER)
    DLLEXPORT static void DrawFPS_Set(float value)
#else
    static void DrawFPS_Set(float value)
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_DrawFPS_Set)
#endif
        ::SE::Time::DrawFPS = value;
    }
#if defined(_MSC_VER)
    DLLEXPORT static float TimeScale_Get()
#else
    static float TimeScale_Get()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_TimeScale_Get)
#endif
        return ::SE::Time::TimeScale;
    }
#if defined(_MSC_VER)
    DLLEXPORT static void TimeScale_Set(float value)
#else
    static void TimeScale_Set(float value)
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_TimeScale_Set)
#endif
        ::SE::Time::TimeScale = value;
    }
#if defined(_MSC_VER)
    DLLEXPORT static float GetDeltaTime()
#else
    static float GetDeltaTime()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetDeltaTime)
#endif
        return ::SE::Time::GetDeltaTime();
    }
#if defined(_MSC_VER)
    DLLEXPORT static float GetGameTime()
#else
    static float GetGameTime()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetGameTime)
#endif
        return ::SE::Time::GetGameTime();
    }
#if defined(_MSC_VER)
    DLLEXPORT static float GetUnscaledDeltaTime()
#else
    static float GetUnscaledDeltaTime()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetUnscaledDeltaTime)
#endif
        return ::SE::Time::GetUnscaledDeltaTime();
    }
#if defined(_MSC_VER)
    DLLEXPORT static float GetUnscaledGameTime()
#else
    static float GetUnscaledGameTime()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetUnscaledGameTime)
#endif
        return ::SE::Time::GetUnscaledGameTime();
    }
#if defined(_MSC_VER)
    DLLEXPORT static float GetTimeSinceStartup()
#else
    static float GetTimeSinceStartup()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetTimeSinceStartup)
#endif
        return ::SE::Time::GetTimeSinceStartup();
    }
#if defined(_MSC_VER)
    DLLEXPORT static double GetNextTick()
#else
    static double GetNextTick()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_GetNextTick)
#endif
        return ::SE::Time::GetNextTick();
    }
#if defined(_MSC_VER)
    DLLEXPORT static void Synchronize()
#else
    static void Synchronize()
#endif
    {
#if defined(_MSC_VER)
        MSVC_FUNC_EXPORT(Time_Synchronize)
#endif
        ::SE::Time::Synchronize();
    }
    static void InitRuntime()
    {
    }
};

ScriptingTypeInitializer Time::TypeInitializer(
    (BinaryModule*)GetBinaryModuleSERuntime(),
    StringAnsiView("SE.Time", ARRAY_SIZE("SE.Time") - 1),
    sizeof(::SE::Time),
    &TimeInternal::InitRuntime,
    &ScriptingType::DefaultSpawn, 
    nullptr,
    nullptr,
    nullptr
);

// Plain-C exports
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(::SE::DateTime) Time_StartupTime_Get()
{
    return TimeInternal::StartupTime_Get();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(void) Time_StartupTime_Set(::SE::DateTime value)
{
    TimeInternal::StartupTime_Set(value);
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_UpdateFPS_Get()
{
    return TimeInternal::UpdateFPS_Get();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(void) Time_UpdateFPS_Set(float value)
{
    TimeInternal::UpdateFPS_Set(value);
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_DrawFPS_Get()
{
    return TimeInternal::DrawFPS_Get();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(void) Time_DrawFPS_Set(float value)
{
    TimeInternal::DrawFPS_Set(value);
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_TimeScale_Get()
{
    return TimeInternal::TimeScale_Get();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(void) Time_TimeScale_Set(float value)
{
    TimeInternal::TimeScale_Set(value);
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_GetDeltaTime()
{
    return TimeInternal::GetDeltaTime();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_GetGameTime()
{
    return TimeInternal::GetGameTime();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_GetUnscaledDeltaTime()
{
    return TimeInternal::GetUnscaledDeltaTime();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_GetUnscaledGameTime()
{
    return TimeInternal::GetUnscaledGameTime();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(float) Time_GetTimeSinceStartup()
{
    return TimeInternal::GetTimeSinceStartup();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(double) Time_GetNextTick()
{
    return TimeInternal::GetNextTick();
}
#endif
#if !defined(_MSC_VER)
DEFINE_INTERNAL_CALL(void) Time_Synchronize()
{
    TimeInternal::Synchronize();
}
#endif
}