Src/Engine/Runtime/_Generated/AutoGenerated/Time.CSharp.cs

//-------------------------------------------------------------------------
// Auto-generated by BindingsGenerator - do not edit manually.
// Source: E:/EngineProject/SolarEngine/Src/Engine//Runtime/Utilities/Time.h
//-------------------------------------------------------------------------
#pragma warning disable CS0108
#pragma warning disable CS8603
#pragma warning disable CS8625
using System;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;
using System.Runtime.InteropServices.Marshalling;
using SE.Interop;

namespace SE
{
    public unsafe static partial class Time
    {
        [LibraryImport("SERuntime", EntryPoint = "Time_GetDeltaTime", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_GetDeltaTime();

        [LibraryImport("SERuntime", EntryPoint = "Time_GetGameTime", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_GetGameTime();

        [LibraryImport("SERuntime", EntryPoint = "Time_GetUnscaledDeltaTime", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_GetUnscaledDeltaTime();

        [LibraryImport("SERuntime", EntryPoint = "Time_GetUnscaledGameTime", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_GetUnscaledGameTime();

        [LibraryImport("SERuntime", EntryPoint = "Time_GetTimeSinceStartup", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_GetTimeSinceStartup();

        [LibraryImport("SERuntime", EntryPoint = "Time_GetNextTick", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial double Internal_GetNextTick();

        [LibraryImport("SERuntime", EntryPoint = "Time_Synchronize", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial void Internal_Synchronize();

        public static float  GetDeltaTime()
        {
            return Internal_GetDeltaTime();
        }

        public static float  GetGameTime()
        {
            return Internal_GetGameTime();
        }

        public static float  GetUnscaledDeltaTime()
        {
            return Internal_GetUnscaledDeltaTime();
        }

        public static float  GetUnscaledGameTime()
        {
            return Internal_GetUnscaledGameTime();
        }

        public static float  GetTimeSinceStartup()
        {
            return Internal_GetTimeSinceStartup();
        }

        public static double  GetNextTick()
        {
            return Internal_GetNextTick();
        }

        public static void  Synchronize()
        {
            Internal_Synchronize();
        }

        [LibraryImport("SERuntime", EntryPoint = "Time_StartupTime_Get", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial System.DateTime Internal_StartupTime_Get();

        [LibraryImport("SERuntime", EntryPoint = "Time_StartupTime_Set", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial void Internal_StartupTime_Set(System.DateTime value);

        public static System.DateTime StartupTime
        {
            get { return Internal_StartupTime_Get(); }
            set { Internal_StartupTime_Set(value); }
        }

        [LibraryImport("SERuntime", EntryPoint = "Time_UpdateFPS_Get", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_UpdateFPS_Get();

        [LibraryImport("SERuntime", EntryPoint = "Time_UpdateFPS_Set", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial void Internal_UpdateFPS_Set(float value);

        public static float UpdateFPS
        {
            get { return Internal_UpdateFPS_Get(); }
            set { Internal_UpdateFPS_Set(value); }
        }

        [LibraryImport("SERuntime", EntryPoint = "Time_DrawFPS_Get", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_DrawFPS_Get();

        [LibraryImport("SERuntime", EntryPoint = "Time_DrawFPS_Set", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial void Internal_DrawFPS_Set(float value);

        public static float DrawFPS
        {
            get { return Internal_DrawFPS_Get(); }
            set { Internal_DrawFPS_Set(value); }
        }

        [LibraryImport("SERuntime", EntryPoint = "Time_TimeScale_Get", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial float Internal_TimeScale_Get();

        [LibraryImport("SERuntime", EntryPoint = "Time_TimeScale_Set", StringMarshalling = StringMarshalling.Custom, StringMarshallingCustomType = typeof(Interop.StringMarshaller))]
        internal static partial void Internal_TimeScale_Set(float value);

        public static float TimeScale
        {
            get { return Internal_TimeScale_Get(); }
            set { Internal_TimeScale_Set(value); }
        }

    }
}

